# Bank-System

./: CMakeLists.txt  Helper.cpp  Helper.h  README.md  UML.mdj  main.cpp
controller/: AdminController.cpp  AdminController.h  ClientController.cpp  ClientController.h  EmployeeController.cpp  EmployeeController.h
database/: client.txt  employee.txt  transactionHistory.txt
manger/: AdminManger.cpp  AdminManger.h  ClientManger.cpp  ClientManger.h  EmployeeManager.cpp  EmployeeManager.h
model/: Admin.cpp  Admin.h  Client.cpp  Client.h  Employee.cpp  Employee.h  Person.cpp  Person.h  Transaction.cpp  Transaction.h
view/: View.cpp  View.h
